# cargo-aws-lambda

./: .gitignore  Cargo.toml  README.md
examples/aws-lambda-hello/: Cargo.toml  Lambda.toml
examples/aws-lambda-hello/src/: lib.rs
src/: docker.rs  lambda.rs  logs.rs  main.rs  util.rs
