[package]
name = "aws-lambda-hello"
version = "0.1.0"
authors = ["Vesa Vilhonen <vesa@vilhonen.com>"]
edition = "2018"
publish = false

[dependencies]
lambda_runtime = "0.2.1"
log = "0.4.8"
serde = "1.0.101"
serde_json = "1.0.41"

[dependencies.simple_logger]
version = "1.3.0"
default-features = false